--- a/sass/pickmeup/_pickmeup.scss
+++ b/sass/pickmeup/_pickmeup.scss
@@ -29,7 +29,7 @@ $today-color                      : $color-hover !default;
 	display         : inline-block;
 	position        : absolute;
 	touch-action    : manipulation;
-	z-index			: 10; // quick fix to ensure it works in hotlist
+	z-index			: $oe-z-tooltip; // quick fix to ensure it works in hotlist
 	
 	@include font-size(12);
 
